@@ -431,8 +431,9 @@ static void _printStatus(Output_Type type, HttpResponse res, Service_T s) {
                                         _formatStatus("memory total", Event_Resource, type, res, s, s->inf.process->total_mem_percent >= 0, "%.1f%% [%s]", s->inf.process->total_mem_percent, Convert_bytes2str(s->inf.process->total_mem, (char[10]){}));
 #ifdef LINUX
                                         _formatStatus("security attribute", Event_Invalid, type, res, s, *(s->inf.process->secattr), "%s", s->inf.process->secattr);
-                                        _formatStatus("open files", Event_Resource, type, res, s, s->inf.process->open_files != (uint64_t) -1, "%lu", s->inf.process->open_files);
-                                        _formatStatus("total open files", Event_Resource, type, res, s, s->inf.process->total_open_files != (uint64_t) -1, "%lu", s->inf.process->total_open_files);
+                                        int64_t limit = s->inf.process->files.limit.soft < s->inf.process->files.limit.hard ? s->inf.process->files.limit.soft : s->inf.process->files.limit.hard;
+                                        _formatStatus("open files", Event_Resource, type, res, s, s->inf.process->files.open != -1LL, "%ld [%.1f%% of %ld limit]", s->inf.process->files.open, (float)100 * (float)s->inf.process->files.open / (float)limit, limit);
+                                        _formatStatus("total open files", Event_Resource, type, res, s, s->inf.process->files.openTotal != -1LL, "%ld", s->inf.process->files.openTotal);
 #endif
                                 }
                                 _printIOStatistics(type, res, s, &(s->inf.process->read), "disk read", "read");
@@ -1933,9 +1934,12 @@ static void print_service_rules_openfiles(HttpResponse res, Service_T s) {
         for (OpenFiles_T o = s->openfileslist; o; o = o->next) {
                 StringBuffer_T sb = StringBuffer_create(256);
                 if (o->total) {
-                        _displayTableRow(res, true, "rule", "Total open files", "%s", StringBuffer_toString(Util_printRule(sb, o->action, "If %s %lu", operatornames[o->operator], o->limit)));
+                        _displayTableRow(res, true, "rule", "Total open files", "%s", StringBuffer_toString(Util_printRule(sb, o->action, "If %s %lu", operatornames[o->operator], o->limit_absolute)));
                 } else {
-                        _displayTableRow(res, true, "rule", "Open files", "%s", StringBuffer_toString(Util_printRule(sb, o->action, "If %s %lu", operatornames[o->operator], o->limit)));
+                        if (o->limit_absolute > -1LL)
+                                _displayTableRow(res, true, "rule", "Open files", "%s", StringBuffer_toString(Util_printRule(sb, o->action, "If %s %lu", operatornames[o->operator], o->limit_absolute)));
+                        else
+                                _displayTableRow(res, true, "rule", "Open files", "%s", StringBuffer_toString(Util_printRule(sb, o->action, "If %s %.1f%%", operatornames[o->operator], o->limit_percent)));
                 }
                 StringBuffer_free(&sb);
         }
