@@ -405,7 +405,15 @@ static void status_service(Service_T S, StringBuffer_T B, int V) {
                                                 "<cpu>"
                                                 "<percent>%.1f</percent>"
                                                 "<percenttotal>%.1f</percenttotal>"
-                                                "</cpu>",
+                                                "</cpu>"
+                                                "<files>"
+                                                "<open>%"PRId64"</open>"
+                                                "<opentotal>%"PRId64"</opentotal>"
+                                                "<limit>"
+                                                "<soft>%"PRId64"</soft>"
+                                                "<hard>%"PRId64"</hard>"
+                                                "</limit>"
+                                                "</files>",
                                                 S->inf.process->threads,
                                                 S->inf.process->children,
                                                 S->inf.process->mem_percent,
@@ -413,7 +421,11 @@ static void status_service(Service_T S, StringBuffer_T B, int V) {
                                                 (unsigned long long)((double)S->inf.process->mem / 1024.),       // Send as kB for backward compatibility
                                                 (unsigned long long)((double)S->inf.process->total_mem / 1024.), // Send as kB for backward compatibility
                                                 S->inf.process->cpu_percent,
-                                                S->inf.process->total_cpu_percent);
+                                                S->inf.process->total_cpu_percent,
+                                                S->inf.process->files.open,
+                                                S->inf.process->files.openTotal,
+                                                S->inf.process->files.limit.soft,
+                                                S->inf.process->files.limit.hard);
                                 }
                                 _ioStatistics(B, "read", &(S->inf.process->read));
                                 _ioStatistics(B, "write", &(S->inf.process->write));
