@@ -1074,10 +1074,14 @@ void Util_printService(Service_T s) {
 
         for (OpenFiles_T o = s->openfileslist; o; o = o->next) {
                 StringBuffer_clear(buf);
-                if (o->total)
-                        printf(" %-20s = %s\n", "Total open files", StringBuffer_toString(Util_printRule(buf, o->action, "if %s %lu", operatornames[o->operator], o->limit)));
-                else
-                        printf(" %-20s = %s\n", "Open files", StringBuffer_toString(Util_printRule(buf, o->action, "if %s %lu", operatornames[o->operator], o->limit)));
+                if (o->total) {
+                        printf(" %-20s = %s\n", "Total open files", StringBuffer_toString(Util_printRule(buf, o->action, "if %s %lu", operatornames[o->operator], o->limit_absolute)));
+                } else {
+                        if (o->limit_absolute > -1)
+                                printf(" %-20s = %s\n", "Open files", StringBuffer_toString(Util_printRule(buf, o->action, "if %s %lu", operatornames[o->operator], o->limit_absolute)));
+                        else
+                                printf(" %-20s = %s\n", "Open files", StringBuffer_toString(Util_printRule(buf, o->action, "if %s %.1f%%", operatornames[o->operator], o->limit_percent)));
+                }
         }
 
         if (s->gid && s->gid->action) {
@@ -1785,9 +1789,9 @@ void Util_resetInfo(Service_T s) {
                         s->inf.process->cpu_percent = -1.;
                         s->inf.process->total_cpu_percent = -1.;
                         s->inf.process->uptime = -1;
+                        s->inf.process->files.open = -1LL;
+                        s->inf.process->files.openTotal = -1LL;
                         *(s->inf.process->secattr) = 0;
-                        s->inf.process->open_files = (uint64_t) -1;
-                        s->inf.process->total_open_files = (uint64_t) -1;
                         _resetIOStatistics(&(s->inf.process->read));
                         _resetIOStatistics(&(s->inf.process->write));
                         break;
